# aiops_platform_project

./: .env  main.py  project_spec.md  pyproject.toml
project1-aiops/: requirements.txt
project1-aiops/config/: config.ini
project1-aiops/notebooks/: LLM_Victoria_metrics.ipynb  anomaly_detection.ipynb  metrics.om
project1-aiops/scripts/: analyze_anomalies.py  forecast_trends.py  ingest_data.py  ingest_pushgateway.py
project1-aiops/scripts/victoria metrics/: agentic_victoria_metrics.py  nab_to_vm.py
project1-aiops/scripts/victoria metrics/nab_csvs/: 24ae8d.csv  53ea38.csv  5f5533.csv  77c1ca.csv  825cc2.csv  ac20cd.csv  c6585a.csv  fe7f93.csv
project1-aiops/scripts/victoria metrics/out_lp/: 24ae8d.lp  53ea38.lp  5f5533.lp  77c1ca.lp  825cc2.lp  ac20cd.lp  c6585a.lp  fe7f93.lp
